<?xml version="1.0" encoding="utf-8"?>
<resources>


    <string name="NewAlbum">New Album</string>
    <string name="NewPhoto">New Photo</string>
    <string name="SlideShow">Slideshow View</string>
    <string name="ComparePhotos">Compare Photos</string>
    <string name="Date">Date:</string>
    <string name="Comment1">Comment:</string>
    <string name="SaveChanges">Save Changes</string>
    <string name="CancelChanges">Cancel</string>
    <string name="TakeAPicture">Take A Photo</string>
    <string name="DeletePhoto">Delete Photo</string>
    <string name="Back">Back</string>

    <string name="app_name">Cicatrix Tracker</string>
    <string name="menuButtonText">Menu</string>
    <string name="sortLabelText">Sort</string>
    <string name="saveLabelext">Save</string>
    <string name="uploadPhoto">Upload Photo</string>
    <string name="discardChangeLabelText">Discard Changes</string>
    <string name="thumbnailLabelText">Thumbnail</string>
    <string name="listLabelText">List</string>
    <string name="albumLabelText">Albums</string>
    <string name="commentLabelText">Comments</string>
    <string name="editLabelText">Edit</string>
    <string name="takeNewLabelText">New Photo</string>
    <string name="addNewAlbumButtonText">New Album</string>
    <string name="backToAlbumText">Back To Album</string>
    <string name="editAlbumText">Edit Album</string>
    <string name="doneText">Done</string>
    <string name="albumNameLabelText">Album Name:</string>
    <string name="editPhotoLabelText">Edit Photo</string>
    <string name="changeAlbumLabelText">Album</string>
    <string name="deletePhotoLabelText">Delete Photo</string>
    <string name="deleteAlbumLabelText">Delete Album</string>
    <string name="BogoPrompt">Click to take new Photo</string>
    <string name="welcomeLabelText">Welcome</string>
    <string name="resetPasswordText">Change Password</string>
    <string name="changePasswordText">Change Password</string>
    <string name="oldPasswordText">Enter Old Password</string>
    <string name="newPasswordText1">Enter New Password</string>
    <string name="newPasswordText2">Confirm New Password</string>
    <string name="searchText">Search</string>
    <string name="enterTagText">Enter Tag</string>
    <string name="searchPhotosText">Search Photos</string>
    <string name="searchByDateText">Search By Date</string>
    <string name="addAlarm">Set Alarm</string>
    <string name="removeAlarm">Remove Alarm</string>
    <string name="alarmStartTime">Alarm Start Time</string>
    <string name="alarmFrequency">Alarm Frequency</string>
    <string name="editAlbum">Edit Album</string>
    <string name="enterPassword">Enter Password</string>


</resources>
