<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/photoDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Date" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TakeAPicture" />

    <ImageButton
        android:id="@+id/generated_pic"
        android:layout_width="320dp"
        android:layout_height="300dp"
        android:layout_weight="1.47"
        android:src="@drawable/ic_launcher" />

<LinearLayout
    android:id="@+id/chooseAlbumLinearLayout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/changeAlbumTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/changeAlbumLabelText"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/albumNameSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.80" >
    </Spinner>

    <Button
        android:id="@+id/newAlbumButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NewAlbum" />
</LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Comment1" />


    <EditText
        android:id="@+id/commentEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine" >
    </EditText>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/PhotoViewSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SaveChanges" />
        
        <Button
            android:id="@+id/PhotoDelete"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.333"
            android:text="@string/DeletePhoto" />

        <Button
            android:id="@+id/PhotoViewCancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.333"
            android:text="@string/CancelChanges" />
    </LinearLayout>

</LinearLayout>