<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/editPhotoLinearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/editPhotoTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editPhotoLabelText"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="fill_parent"
            android:layout_height="206dp"
            android:src="@drawable/ic_launcher" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/chooseAlbumLinearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/changeAlbumTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/changeAlbumLabelText"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/albumNameSpinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
        </Spinner>
    </LinearLayout>

    <ListView
        android:id="@+id/listView1"
        android:layout_width="fill_parent"
        android:layout_height="125dp"
        android:layout_weight="1.11" >
    </ListView>

    <LinearLayout
        android:id="@+id/editPhotoPopupButtonLinearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/editPhotoMenuButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:text="@string/menuButtonText" />
    </LinearLayout>

</LinearLayout>